--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.agreeya</groupId>
-  <artifactId>springpoc</artifactId>
+  <artifactId>prizy-pricer</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
-
-  <name>springpoc</name>
-  <url>http://maven.apache.org</url>
+  <name>Prizy Pricer</name>
 
   <properties>
     <java.version>1.7</java.version>
@@ -46,7 +44,6 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.2.5.Final</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -70,4 +67,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
