--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,18 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-dbcp</artifactId>
+      <version>8.0.24</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
